--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Змії</title>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="style.css">
-        <link rel="icon"  type="image/png" href="img/snake.png">
+        <link rel="icon"  type="image/png" href="snake.png">
     </head>
     <body>
         <div id="header"></div>
@@ -123,23 +123,23 @@
         <div id='agallary'>
             <h2>Цікаві ілюстрації</h2>
             <div class='gal'>
-                <div class="gi" style="background-image: url(img/img.1.jpg);"></div>
-                <div class="gi" style="background-image: url(img/img.2.jpg);"></div>
-                <div class="gi" style="background-image: url(img/img.3.jpg);"></div>
-                <div class="gi" style="background-image: url(img/img.4.png);"></div>
-                <div class="gi" style="background-image: url(img/img.5.jpg);"></div>
-                <div class="gi" style="background-image: url(img/img.6.jpg);"></div>
-                <div class="gi" style="background-image: url(img/img.7.jpg);"></div>
-                <div class="gi" style="background-image: url(img/img.8.jpg);"></div>
-                <div class="gi" style="background-image: url(img/img.9.jpg);"></div>
-                <div class="gi" style="background-image: url(img/img.10.png);"></div>
-                <div class="gi" style="background-image: url(img/img.11.png);"></div>
-                <div class="gi" style="background-image: url(img/img.12.jpg);"></div>
-                <div class="gi" style="background-image: url(img/img.13.jpg);"></div>
-                <div class="gi" style="background-image: url(img/img.14.png);"></div>
-                <div class="gi" style="background-image: url(img/img.15.jpg);"></div>
-                <div class="gi" style="background-image: url(img/img.16.jpg);"></div>
-                <div class="gi" style="background-image: url(img/img.17.jpg);"></div>
+                <div class="gi" style="background-image: url(img.1.jpg);"></div>
+                <div class="gi" style="background-image: url(img.2.jpg);"></div>
+                <div class="gi" style="background-image: url(img.3.jpg);"></div>
+                <div class="gi" style="background-image: url(img.4.png);"></div>
+                <div class="gi" style="background-image: url(img.5.jpg);"></div>
+                <div class="gi" style="background-image: url(img.6.jpg);"></div>
+                <div class="gi" style="background-image: url(img.7.jpg);"></div>
+                <div class="gi" style="background-image: url(img.8.jpg);"></div>
+                <div class="gi" style="background-image: url(img.9.jpg);"></div>
+                <div class="gi" style="background-image: url(img.10.png);"></div>
+                <div class="gi" style="background-image: url(img.11.png);"></div>
+                <div class="gi" style="background-image: url(img.12.jpg);"></div>
+                <div class="gi" style="background-image: url(img.13.jpg);"></div>
+                <div class="gi" style="background-image: url(img.14.png);"></div>
+                <div class="gi" style="background-image: url(img.15.jpg);"></div>
+                <div class="gi" style="background-image: url(img.16.jpg);"></div>
+                <div class="gi" style="background-image: url(img.17.jpg);"></div>
             </div>
         </div>
         <div id="acontacs">
